real-project/colmap/test-lambda/classification_results/non_compilable/test_2.cpp.log
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:10:1: error: use of undeclared identifier 'NewTest'
   10 | NewTest();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:12:1: error: use of undeclared identifier 'ConsistencyChecker'
   12 | ConsistencyChecker();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:16:1: error: use of undeclared identifier 'NewTest'
   16 | NewTest();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:18:1: error: use of undeclared identifier 'TransiveChecker'
   18 | TransiveChecker();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:22:1: error: use of undeclared identifier 'NewTest'
   22 | NewTest();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:24:1: error: use of undeclared identifier 'SymmetryChecker'
   24 | SymmetryChecker();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:28:1: error: use of undeclared identifier 'NewTest'
   28 | NewTest();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:30:1: error: use of undeclared identifier 'SymmetryChecker'
   30 | SymmetryChecker();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:34:1: error: use of undeclared identifier 'NewTest'
   34 | NewTest();
      | ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_2.cpp:36:1: error: use of undeclared identifier 'ReflexivityChecker'
   36 | ReflexivityChecker();
      | ^
10 errors generated.
